# luminamed-ai

./: .gitignore  LINKEDIN_POST.md  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_models.py
apps/api/app/: config.py  main.py
apps/consumer/app/: globals.css  page.tsx
apps/radiologist/: app.py  requirements.txt
apps/viewer/: ai-viewer.html  index.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  RESEARCH.md  SCREENSHOTS.md  diagrams.md
infra/docker/orthanc/: orthanc.json
services/dicom/: dicom_utils.py
services/inference/: agent_graph.py
services/rag/: embeddings.py  load_knowledge.py  vector_store.py
