[tool.poetry]
name = "luminamed-ai"
version = "0.1.0"
description = "Next-generation radiology report generation with verifiable AI"
authors = ["Christopher"]
readme = "README.md"
packages = [{include = "apps"}, {include = "packages"}, {include = "services"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
langgraph = "^0.2.70"
langchain-core = "^0.3.0"
langchain-google-genai = "^2.0.0"
structlog = "^24.1.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
black = "^23.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"